/*
 * Copyright (C) 2020 bsyonline
 */
package com.rolex.alphax.structural.decorator;

/**
 * @author rolex
 * @since 2020
 */
public interface Student {

    void exam();

}
